# GoodBoy

./: .gitignore  README.md  make_project.sh
project_files/: CMakeCache.txt  cmake_install.cmake
project_files/CMakeScripts/: ReRunCMake.make
project_files/Debug/: GoodBoy
project_files/GoodBoy.xcodeproj/: project.pbxproj
project_files/GoodBoy.xcodeproj/project.xcworkspace/xcuserdata/alexkoukoulas.xcuserdatad/: UserInterfaceState.xcuserstate
project_files/GoodBoy.xcodeproj/xcuserdata/alexkoukoulas.xcuserdatad/xcschemes/: xcschememanagement.plist
source/: CMakeLists.txt  GoodBoy.sln
source/GBR/: apu.cpp  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  display.cpp  display.h  joypad.cpp  main.cpp  memory.cpp  memory.h  system.cpp  system.h  timer.cpp  timer.h  types.h
source/GoodBoy/: apu.cpp  apu.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  display.cpp  display.h  joypad.h  logging.h  main.cpp  memory.cpp  memory.h  system.cpp  system.h  timer.cpp  timer.h
